# Simpless

./: .gitignore  README.md
activator/: Cargo.toml  check_backend_shutdown.ps1  concurrent_startup_test.ps1  smoke_test.ps1
activator/config/: services.db  services.toml
activator/src/: admin.rs  app.rs  auth.rs  config.rs  health.rs  main.rs  proxy.rs  reaper.rs  registry.rs  startup.rs
docs/: home_activator_axum_design_doc.md
simpless_frontend/: Cargo.toml  README.md
simpless_frontend/end2end/: playwright.config.ts
simpless_frontend/end2end/tests/: example.spec.ts
simpless_frontend/public/: admin.js
simpless_frontend/src/: app.rs  main.rs
simpless_frontend/style/: main.scss
